--- a/animal-training-app/package.json
+++ b/animal-training-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "animal-tracking-app",
+  "name": "animal-training-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,12 @@
     "next": "15.2.4"
   },
   "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "@eslint/eslintrc": "^3"
