--- a/animal-training-app-project/package.json
+++ b/animal-training-app-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "animal-training-app",
+  "name": "animal-training-app-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
